fixing layout on small screens

--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -30,8 +30,8 @@ h1
     {
         height: 0px;
         border: 0;
-        border-top: 1px solid rgba(0,0,0,0.1);
-        border-bottom: 1px solid rgba(255,255,255,1);
+        border-top: 1px dashed rgba(0,0,0,0.15);
+        border-bottom: 1px dashed rgba(255,255,255,1);
     }
     hr:last-child
     {
