--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -16,10 +16,16 @@ html,body
     box-sizing: border-box;
 }
 
+#wrapper #content
+{
+    padding-left: 5px;
+    padding-right: 5px;
+}
+
 #nav
 {
     position: relative;
-    width: 100%;
+    max-width: 100%;
     background: $c-cloud;
     height: 50px;
     margin-bottom: 80px;
@@ -27,7 +33,7 @@ html,body
     
     div
     {
-        width: 900px;
+        max-width: 900px;
         display: flex;
         justify-content:center;
         margin: 0 auto;
